test/pt/up/fe/comp/cp2/semanticanalysis/additionalTests/fieldInStatic.jmm
class Test {
    int a;

    static void staticMethod() {
        a = 10; // error: can't access non-static field from static method
    }
}
